Updated configuration and added new files

--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: MONGODB_URI
-        sync: false
+        value: mongodb+srv://vishwavikas4444:Vishwa@cluster0.lrhrsuf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
       - key: PORT
         value: "3000"
     healthCheckPath: /
