--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
   "name": "globalpad",
   "version": "1.0.0",
-  "description": "A simple note-taking and file sharing application",
+  "description": "A simple and secure file sharing web application",
   "main": "deploy.js",
-  "engines": {
-    "node": ">=14.0.0"
-  },
   "scripts": {
     "start": "node deploy.js",
     "dev": "nodemon deploy.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "mongodb": "^6.0.0",
-    "mongoose": "^8.2.1",
-    "multer": "^2.0.0"
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.0.1"
   }
 }
