--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "globalpad",
   "version": "1.0.0",
-  "description": "A simple and secure file sharing web application",
+  "description": "Simple and secure file sharing web application",
   "main": "deploy.js",
   "scripts": {
     "start": "node deploy.js",
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.0.0",
     "mongodb": "^6.3.0",
-    "multer": "^1.4.5-lts.1",
     "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1",
     "dotenv": "^16.3.1",
     "body-parser": "^1.20.2"
   },
