--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "globalpad",
   "version": "1.0.0",
-  "description": "Simple and secure file sharing web application",
+  "description": "A simple note-taking and file sharing application",
   "main": "deploy.js",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "start": "node deploy.js",
     "dev": "nodemon deploy.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
-    "mongodb": "^6.3.0",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.3.1",
-    "body-parser": "^1.20.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "mongodb": "^6.0.0",
+    "mongoose": "^8.2.1",
+    "multer": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "nodemon": "^3.1.0"
   }
 }
